--- a/src/styles/components/_main_nav.scss
+++ b/src/styles/components/_main_nav.scss
@@ -3,6 +3,9 @@ $secondary-color: #ACBEBE;
 $tertiary-color: #F4F4EF;
 $highlights: #A01D26;
 
+.nav {
+    min-width: 980px;
+}
 .main-nav {
     display: flex;
     justify-content: space-between;
